<resources>
    <string name="app_name">Animus</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_notes" />
    <string name="whats_in_your_mind" />
    <string name="share_note" />
    <string name="delete_notes" />
    <string name="action_settings" />
    <string name="Email">⠀Email</string>
    <string name="Password">⠀Password</string>
    <string name="Login">LOG IN</string>
    <string name="NewuserCreate">New Here? Create an account</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="LoginBanner">Welcome Back!</string>
    <string name="LoginBanner2">Please login below</string>
    <string name="Title">Title</string>
    <string name="loginaccount">Have an account? Login here</string>
    <string name="Fullname">⠀Name</string>
    <string name="phoneN">⠀Phone number</string>
    <string name="Signup">SIGN UP</string>
    <string name="banner">Please fill the info below</string>
    <string name="createacct">Create Account</string>


</resources>
